fixed: Windows build/compile
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27236 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -2906,6 +2906,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\xbmc\utils\FileOperationJob.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\utils\FileOperationJob.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\xbmc\utils\fstrcmp.cpp"
 					>
 				</File>
