Added PCM remapping to all DVD audio renderers Removed deprecated asound.conf hardcoded codec mappings Added PulseAudio remapping support Added ALSA remapping support Added Win32 Remapping Support - Thanks ArtVandelae
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27266 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -2114,11 +2114,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\xbmc\cores\AudioRenderers\Win32ChannelRemap.cpp"
+					RelativePath="..\..\xbmc\utils\PCMRemap.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\xbmc\cores\AudioRenderers\Win32ChannelRemap.h"
+					RelativePath="..\..\xbmc\utils\PCMRemap.h"
 					>
 				</File>
 				<File
