[WIN32] fixed compilation with crystalhd enabled + cosmetics (thanks jmarshall)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27300 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -876,14 +876,6 @@
 						Name="Video"
 						>
 						<File
-							RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\CrystalHD.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\CrystalHD.h"
-							>
-						</File>
-						<File
 							RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\DllLibMpeg2.h"
 							>
 						</File>
@@ -923,6 +915,142 @@
 							RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\DVDVideoPPFFmpeg.h"
 							>
 						</File>
+						<Filter
+							Name="CrystlHD"
+							>
+							<File
+								RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\bits_reader.h"
+								>
+							</File>
+							<File
+								RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\cpb.c"
+								>
+								<FileConfiguration
+									Name="Release (OpenGL)|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										CompileAs="2"
+									/>
+								</FileConfiguration>
+								<FileConfiguration
+									Name="Debug (DirectX)|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										CompileAs="2"
+									/>
+								</FileConfiguration>
+								<FileConfiguration
+									Name="Release (DirectX)|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										CompileAs="2"
+									/>
+								</FileConfiguration>
+								<FileConfiguration
+									Name="Debug (OpenGL)|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										CompileAs="2"
+									/>
+								</FileConfiguration>
+							</File>
+							<File
+								RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\cpb.h"
+								>
+							</File>
+							<File
+								RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\CrystalHD.cpp"
+								>
+							</File>
+							<File
+								RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\CrystalHD.h"
+								>
+							</File>
+							<File
+								RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\h264_parser.c"
+								>
+								<FileConfiguration
+									Name="Release (OpenGL)|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										CompileAs="2"
+									/>
+								</FileConfiguration>
+								<FileConfiguration
+									Name="Debug (DirectX)|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										CompileAs="2"
+									/>
+								</FileConfiguration>
+								<FileConfiguration
+									Name="Release (DirectX)|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										CompileAs="2"
+									/>
+								</FileConfiguration>
+								<FileConfiguration
+									Name="Debug (OpenGL)|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										CompileAs="2"
+									/>
+								</FileConfiguration>
+							</File>
+							<File
+								RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\h264_parser.h"
+								>
+							</File>
+							<File
+								RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\nal.c"
+								>
+								<FileConfiguration
+									Name="Release (OpenGL)|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										CompileAs="2"
+									/>
+								</FileConfiguration>
+								<FileConfiguration
+									Name="Debug (DirectX)|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										CompileAs="2"
+									/>
+								</FileConfiguration>
+								<FileConfiguration
+									Name="Release (DirectX)|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										CompileAs="2"
+									/>
+								</FileConfiguration>
+								<FileConfiguration
+									Name="Debug (OpenGL)|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										CompileAs="2"
+									/>
+								</FileConfiguration>
+							</File>
+							<File
+								RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\nal.h"
+								>
+							</File>
+						</Filter>
 					</Filter>
 					<Filter
 						Name="Overlay"
@@ -2106,19 +2234,19 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\xbmc\cores\AudioRenderers\PulseAudioDirectSound.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\cores\AudioRenderers\PulseAudioDirectSound.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\xbmc\utils\PCMRemap.cpp"
 					>
 				</File>
 				<File
 					RelativePath="..\..\xbmc\utils\PCMRemap.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\cores\AudioRenderers\PulseAudioDirectSound.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\cores\AudioRenderers\PulseAudioDirectSound.h"
 					>
 				</File>
 				<File
