changed: replaced GUIDialogAddonBrowser.cpp/h with GUIWindowAddonBrowser.cpp/h (dialog could be based on this if needed) added: Confluence skin for GUIWindowAddonBrowser, accessed from settings menu changed: renabled DownloadQueue/DownloadQueueManager in build changed: allow const paramater passing to DownloadQueue/DownloadQueueManager changed: renamed template paramater in AddonDll.h which conflicted with new IAddon::Props() method changed: remove AddonProps from IAddon.h changed: store addon versions in struct AddonVersion rather than CStdString, allows comparison with standard operators added: basic dependency resolution to CAddonMgr (can only resolve dependencies against locally installed addons for now) changed: use AddonProps in each CAddon rather than individual fields for it's properties changed: IAddon::Parent() should return the addon's parent directly, rather than it's UUID. If no Parent exists(default case) returns an empty AddonPtr changed: removed the individual "Manage <addontype>" buttons from CGUISettings. Could add jumps to CGUIWindowAddonBrowser if neccessary
other stuff: tidy up, fixing warnings etc

git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/addons-fwork@27329 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/Makefile.in
+++ b/xbmc/Makefile.in
@@ -17,10 +17,12 @@ INCLUDES+=-Ilib/libcdio/libcdio/include
 SRCS=Application.cpp \
      CueDocument.cpp \
      GUISettings.cpp \
+     GUIWindowAddonBrowser.cpp \
      GUIWindowSettings.cpp \
      GUIWindowSettingsCategory.cpp \
      GUIWindowSettingsProfile.cpp \
      GUIWindowSettingsScreenCalibration.cpp \
+     Scraper.cpp \
      Settings.cpp \
      SettingsControls.cpp \
      GUIDialogMusicScan.cpp \
@@ -115,7 +117,6 @@ SRCS=Application.cpp \
      Song.cpp \
      VideoDatabase.cpp \
      ViewDatabase.cpp \
-     GUIDialogAddonBrowser.cpp \
      GUIDialogAddonSettings.cpp \
      GUIDialogAudioSubtitleSettings.cpp \
      GUIDialogBoxBase.cpp \
