[DSPlayer] Major code cleanup thanks to blinkeb
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@27440 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -2199,6 +2199,22 @@
 				Name="DSPlayer"
 				>
 				<File
+					RelativePath="..\..\xbmc\cores\DSPlayer\AudioStreamsManager.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\cores\DSPlayer\AudioStreamsManager.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\cores\DSPlayer\ChaptersManager.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\cores\DSPlayer\ChaptersManager.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\xbmc\cores\DSPlayer\DSConfig.cpp"
 					>
 				</File>
