[DSPlayer]Added video and audio informations when pressed "i" button thanks to blinked, Added a process for the property page the pause is not required anymore
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@27466 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -2199,14 +2199,6 @@
 				Name="DSPlayer"
 				>
 				<File
-					RelativePath="..\..\xbmc\cores\DSPlayer\AudioStreamsManager.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\cores\DSPlayer\AudioStreamsManager.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\xbmc\cores\DSPlayer\ChaptersManager.cpp"
 					>
 				</File>
@@ -2239,6 +2231,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\xbmc\cores\DSPlayer\DSPropertyPage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\cores\DSPlayer\DSPropertyPage.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\xbmc\cores\DSPlayer\FGFilter.cpp"
 					>
 				</File>
@@ -2260,6 +2260,14 @@
 				</File>
 				<File
 					RelativePath="..\..\xbmc\cores\DSPlayer\FGManager.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\cores\DSPlayer\StreamsManager.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\cores\DSPlayer\StreamsManager.h"
 					>
 				</File>
 				<Filter
