--- a/project/VS2008Express/dshowutil.vcproj
+++ b/project/VS2008Express/dshowutil.vcproj
@@ -174,6 +174,22 @@
 			RelativePath="..\..\xbmc\cores\DSPlayer\DShowUtil\DShowUtil.h"
 			>
 		</File>
+		<File
+			RelativePath="..\..\xbmc\cores\DSPlayer\DShowUtil\MediaTypeEx.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\xbmc\cores\DSPlayer\DShowUtil\MediaTypeEx.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\xbmc\cores\DSPlayer\DShowUtil\MediaTypes.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\xbmc\cores\DSPlayer\DShowUtil\MediaTypes.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
