[WIN32] fixed compiling
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/addons-fwork@27512 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -467,6 +467,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\xbmc\win32\strverscmp.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\xbmc\win32\Win32PowerSyscall.cpp"
 				>
 			</File>
@@ -915,6 +919,14 @@
 							RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\DVDVideoPPFFmpeg.h"
 							>
 						</File>
+						<File
+							RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\DXVA.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\DXVA.h"
+							>
+						</File>
 						<Filter
 							Name="CrystlHD"
 							>
@@ -1051,14 +1063,6 @@
 								>
 							</File>
 						</Filter>
-						<File
-							RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\DXVA.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\DXVA.h"
-							>
-						</File>
 					</Filter>
 					<Filter
 						Name="Overlay"
@@ -2077,14 +2081,6 @@
 					RelativePath="..\..\xbmc\visualizations\Visualisation.h"
 					>
 				</File>
-				<File
-					RelativePath="..\..\xbmc\visualizations\VisualisationFactory.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\visualizations\VisualisationFactory.h"
-					>
-				</File>
 			</Filter>
 			<Filter
 				Name="VideoRenderers"
@@ -2207,14 +2203,6 @@
 				</File>
 				<File
 					RelativePath="..\..\xbmc\screensavers\ScreenSaver.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\screensavers\ScreenSaverFactory.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\screensavers\ScreenSaverFactory.h"
 					>
 				</File>
 				<File
@@ -2346,11 +2334,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\xbmc\GUIDialogPluginSettings.cpp"
+					RelativePath="..\..\xbmc\GUIDialogAddonSettings.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\xbmc\GUIDialogPluginSettings.h"
+					RelativePath="..\..\xbmc\GUIDialogAddonSettings.h"
 					>
 				</File>
 				<File
@@ -2395,30 +2383,6 @@
 				</File>
 				<File
 					RelativePath="..\..\xbmc\GUIWindowTestPatternGL.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\PluginSettings.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\PluginSettings.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\ScraperSettings.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\ScraperSettings.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\ScriptSettings.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\ScriptSettings.h"
 					>
 				</File>
 				<File
@@ -2870,6 +2834,26 @@
 				Name="Utils"
 				>
 				<File
+					RelativePath="..\..\xbmc\utils\Addon.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\utils\Addon.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\utils\AddonDll.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\utils\AddonManager.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\utils\AddonManager.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\xbmc\utils\AlarmClock.cpp"
 					>
 				</File>
@@ -3279,6 +3263,14 @@
 				</File>
 				<File
 					RelativePath="..\..\xbmc\utils\RssReader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\Scraper.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\Scraper.h"
 					>
 				</File>
 				<File
@@ -3754,14 +3746,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\xbmc\GUIDialogVisualisationSettings.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\GUIDialogVisualisationSettings.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\xbmc\GUIDialogVolumeBar.cpp"
 					>
 				</File>
@@ -3811,6 +3795,14 @@
 				</File>
 				<File
 					RelativePath="..\..\xbmc\GUIViewStateScripts.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\GUIWindowAddonBrowser.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\GUIWindowAddonBrowser.h"
 					>
 				</File>
 				<File
@@ -3933,6 +3925,14 @@
 			<Filter
 				Name="Filesystem"
 				>
+				<File
+					RelativePath="..\..\xbmc\FileSystem\AddonsDirectory.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\FileSystem\AddonsDirectory.h"
+					>
+				</File>
 				<File
 					RelativePath="..\..\xbmc\FileSystem\ASAPFileDirectory.cpp"
 					>
