merged: changes from trunk. revs: r27568:27610
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@27611 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/utils/Makefile
+++ b/xbmc/utils/Makefile
@@ -73,7 +73,8 @@ SRCS=Addon.cpp \
      Semaphore.cpp \
      FileOperationJob.cpp \
      FileUtils.cpp \
-     Variant.cpp
+     Variant.cpp \
+     PCMLimiter.cpp
 
 LIB=utils.a
 
