added: Addon Picture fpr TVHeadend changed: sync more parts with addons-fwork branch changed: moved screensavers to addon framework changed: moved visualizations to addon framework (currently with libaddon based settings transfer) added: German TV and Addon related german translation to Confluence skin
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@27646 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/utils/Makefile
+++ b/xbmc/utils/Makefile
@@ -8,6 +8,8 @@ SRCS=Addon.cpp \
      Builtins.cpp \
      CharsetConverter.cpp \
      CriticalSection.cpp \
+     DownloadQueue.cpp \
+     DownloadQueueManager.cpp \
      Event.cpp \
      fstrcmp.cpp \
      GUIInfoManager.cpp \
