--- a/xbmc/visualizations/OpenGLSpectrum/Makefile.in
+++ b/xbmc/visualizations/OpenGLSpectrum/Makefile.in
@@ -1,18 +1,18 @@
 ARCH=@ARCH@
-INCLUDES=-I. -I.. -I../../linux -I../../ -I ../../../guilib
+INCLUDES=-I. -I.. -I../../linux -I../../addons/include -I../../ -I ../../../guilib
 DEFINES+=-DHAS_SDL_OPENGL -DHAS_SDL
 CXXFLAGS=-fPIC
 OBJS=opengl_spectrum.o
 
-SLIB=../../../visualisations/opengl_spectrum.vis
+SLIB=../../../addons/visualizations/GLSpectrum/opengl_spectrum.vis
 
 $(SLIB): $(OBJS)
 ifeq ($(findstring osx,$(ARCH)), osx)
 	@export MACOSX_DEPLOYMENT_TARGET=10.4
-	$(CXX) $(CXXFLAGS) -bundle -shared -flat_namespace -undefined suppress -o $@ $(OBJS)
+	$(CXX) $(CXXFLAGS) -bundle -shared -flat_namespace -undefined suppress -o $@ $(OBJS) ../../addons/include/xbmc_addon_lib++.a
 	../../../tools/Mach5/wrapper.rb $@;mv output.so $@
 else
-	$(CXX) $(CXXFLAGS) -shared -g -o $(SLIB) $(OBJS)
+	$(CXX) $(CXXFLAGS) -shared -g -o $(SLIB) $(OBJS) ../../addons/include/xbmc_addon_lib++.a
 endif
 
 include ../../../Makefile.include
