--- a/xbmc/visualizations/XBMCProjectM/Makefile.in
+++ b/xbmc/visualizations/XBMCProjectM/Makefile.in
@@ -1,7 +1,8 @@
 ARCH=@ARCH@
-INCLUDES=-I. -I.. -I../../linux -I../../ -I../../../guilib -I../../../visualisations
+INCLUDES=-I. -I../../addons/include
 OBJS=Main.o
-SLIB=../../../visualisations/ProjectM.vis
+SLIB=../../../addons/visualizations/ProjectM/projectM.vis
+DEFINES+=-DHAS_SDL_OPENGL -DHAS_SDL
 CXXFLAGS=-O3 -g -fPIC
 DIRS=libprojectM
 
@@ -19,7 +20,7 @@ libprojectM/libprojectM.dylib:
 	$(MAKE) -C libprojectM
 else
 $(SLIB): $(OBJS) libprojectM/libprojectM.so
-	$(CXX) ./libprojectM/CMakeFiles/projectM.dir/*.o -fPIC -shared $(CFLAGS) -o $(SLIB) $(OBJS) `cat ../../cores/DllLoader/exports/wrapper.def` ../../cores/DllLoader/exports/wrapper.o
+	$(CXX) ./libprojectM/CMakeFiles/projectM.dir/*.o -fPIC -shared $(CFLAGS) -o $(SLIB) $(OBJS) ../../addons/include/xbmc_addon_lib++.a `cat ../../cores/DllLoader/exports/wrapper.def` ../../cores/DllLoader/exports/wrapper.o
 	cp -rfT libprojectM/presets ../../../visualisations/projectM
 
 libprojectM/libprojectM.so: 
