--- a/configure.in
+++ b/configure.in
@@ -388,21 +388,7 @@ else
   # don't combine with mysqlclient check in apple section above, Linux needs
   # paths from mysql_config
   AC_CHECK_LIB([mysqlclient], [main],, AC_MSG_ERROR($missing_library))
-
-  #this is to work around an issue with arch appending the library overriding our explicit detection
-  ARCH_FIX="$LIBS"
-  AC_CHECK_LIB([faad],      [main],
-               [
-                 if test -f "/usr/lib/libfaad.so.2"; then
-                   FAAD_LIBRARY="libfaad.so.2"
-                   LIBS="$ARCH_FIX /usr/lib/libfaad.so.2"
-                 else
-                   LIBS="$ARCH_FIX -lfaad"
-                   FAAD_LIBRARY="libfaad.so.0"
-                 fi
-                 AC_DEFINE_UNQUOTED([FAAD_LIBRARY], ["$FAAD_LIBRARY"], [The faad library version to use])
-               ],
-               AC_MSG_ERROR($missing_library))
+  AC_CHECK_LIB([faad],      [main],, AC_MSG_ERROR($missing_library))
   AC_CHECK_HEADER([FLAC/stream_decoder.h],, AC_MSG_ERROR($missing_library))
   AC_CHECK_LIB([smbclient], [main],, AC_MSG_ERROR($missing_library))
   AC_CHECK_LIB([SDL_mixer], [main],, AC_MSG_ERROR($missing_library))
