fixed: Remove -Dunix. unix is an internal system define, all unix-compilers (comprising linux) internally define. It's a violation of POSIX to specify it on a compiler's command line. thanks to fiveisalive
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27677 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/lib/libRTV/Makefile.in
+++ b/xbmc/lib/libRTV/Makefile.in
@@ -1,7 +1,7 @@
 SRCS=crypt.c guideclient.c GuideParser.c httpclient.c httpfsclient.c interface.c md5.c netclient.c rtv.c sleep.c
 
-CFLAGS += -D_LINUX -D__unix__
-CXXFLAGS += -D_LINUX -D__unix__
+CFLAGS += -D_LINUX
+CXXFLAGS += -D_LINUX
 
 LIB= librtv-@ARCH@.a
 
